src/stylesheets/components/_slider.scss
//
// Slider
// --------------------------------------------------

.slider {
  display: flex;
  align-items: center;
  width: $slider-width;
  height: $slider-height;
  contain: strict;

  .draggable {
    flex: 1 1 auto;
    display: flex;
    align-items: center;
    height: $slider-handle-size + 2px;
  }

  .btn {
    flex: 0 0 auto;

    &:active {
      .icon {
        color: $icon-active-color;
      }
    }

    &.active {
      opacity: $btn-disabled-opacity;
    }

    .overlay-mode & {
      .icon {
        color: $slider-overlay-icon-color;
      }
    }
  }
}

.frameless {
  .window-draggable {
    .slider {
      -webkit-app-region: no-drag;
    }
  }
}

.slider-track {
  flex: 1 1 0;
  height: $slider-track-height;
  background: $slider-track-bg;
  border-radius: $slider-track-height / 2;
  margin: 0 ($space-min - $shim);
  position: relative;
  border-left: ($slider-handle-size / 2) solid transparent;
  border-right: ($slider-handle-size / 2) solid transparent;

  &:only-child {
    margin: 0;
  }

  .overlay-mode & {
    background: $slider-overlay-track-bg;
  }
}

.slider-range {
  box-sizing: content-box;
  background: $slider-range-bg;
  height: $slider-track-height;
  border-radius: $slider-track-height / 2;
  border-left: ($slider-handle-size / 2) solid transparent;
  border-right: ($slider-handle-size / 2) solid transparent;
  margin-left: -($slider-handle-size / 2);
  position: absolute;

  .overlay-mode & {
    background: $slider-overlay-range-bg;
  }

  .slider.origin & {
    border-left: ($slider-track-height / 2) solid transparent;
    border-right: ($slider-track-height / 2) solid transparent;
    margin-left: -($slider-track-height / 2);
  }
}

.slider-handle {
  box-sizing: content-box;
  width: $slider-handle-size;
  height: $slider-handle-size;
  background: $slider-handle-bg;
  background-clip: content-box;
  border: 1px solid $slider-handle-border;
  border-radius: 50%;
  position: absolute;
  top: -($slider-handle-size / 2 + 1px - $slider-track-height / 2);
  margin-left: -($slider-handle-size / 2 + 1px);

  .overlay-mode & {
    background-color: $slider-overlay-handle-bg;
    border-color: $slider-overlay-handle-border;
  }
}

.slider-value {
  position: absolute;
  left: 50%;
  bottom: 100%;
  width: 32px;        // Use fixed width in order to work around buggy
  margin-left: -16px; // antialiasing (translateX + transition).
  font-size: 10px;
  text-align: center;
  line-height: $toolbar-height / 2 - $slider-handle-size / 2;
  color: $slider-value-color;
  opacity: 0;
  transition: opacity $slider-value-transition;

  .overlay-mode & {
    color: $slider-overlay-value-color;
  }
}

.slider:hover,
.slider-handle:active {
  .slider-value {
    opacity: 1;
  }
}


// Small slider
.slider-sm {
  width: $slider-width-sm;

  .slider-track {
    border-left-width: ($slider-handle-size-sm / 2);
    border-right-width: ($slider-handle-size-sm / 2);
  }

  .slider-range {
    border-left-width: ($slider-handle-size-sm / 2);
    border-right-width: ($slider-handle-size-sm / 2);
    margin-left: -($slider-handle-size-sm / 2);
  }

  .slider-handle {
    width: $slider-handle-size-sm;
    height: $slider-handle-size-sm;
    top: -($slider-handle-size-sm / 2 + 1px - $slider-track-height / 2);
    margin-left: -($slider-handle-size-sm / 2 + 1px);
  }

  .slider-value {
    display: none;
  }
}

